# LLVM-course

./: .gitignore  CMakeLists.txt  README.md
asm-to-ir/: CMakeLists.txt  README.md
asm-to-ir/asm/: app.txt
asm-to-ir/include/: Builder.h  CPU.h  Insn.h
asm-to-ir/src/: Builder.cc  Insn.cc
exam/task1/: CMakeLists.txt  source.c
exam/task2/: CMakeLists.txt  source.tb
exam/task3/: CMakeLists.txt  lex.l  parser.y
exam/task3/examples/: incorrect1.txt  incorrect4.txt
gui-app/: Application.cc  CMakeLists.txt  README.md
gui-app/include/: GUIAPI.h  GUILib.h
gui-app/lib/: GUIImpl.cc  GUILib.c
gui-app/llvm-ir/: Application.ll  LoggedOneCycleApplication.ll  OneCycleApplication.ll  Start.ll
gui-app/src/: Application.c  OneCycleApplication.c  Start.c
ir-gen/: CMakeLists.txt
ir-gen/src/: IRGen.cc
lang-to-ir/: CMakeLists.txt  tree.ll
lang-to-ir/llvm-ir/: App.ll
lang-to-ir/src/: ParaCL.cc  tree.cc
lang-to-ir/src/backend/: IRGen.cc
lang-to-ir/src/frontend/: DotGenerator.cc  Driver.cc  Lexer.l  LibraryLoader.cc  Parser.y  SemanticAnalyzer.cc
lang-to-ir/src/include/: Manager.hh  Utils.hh
lang-to-ir/src/include/backend/: IRGen.hh
lang-to-ir/src/include/ctti/: cstring.hh  hash.hh  pretty_function.hh  type_id.hh
lang-to-ir/src/include/frontend/: ASTBuilder.hh  DotGenerator.hh  Driver.hh  Errors.hh  Lexer.hh  LibraryLoader.hh  Nodes.hh  Operators.hh  SemanticAnalyzer.hh  SymTables.hh  Types.hh
lang-to-ir/src/include/visitor/: Visitor.hh
lang-to-ir/tests/: a.dot  app.cl  app.dot  test1.cl
llvm-pass/: CMakeLists.txt
llvm-pass/examples/: App.cc
llvm-pass/llvm-ir/: LoggedOneCycleApplication.ll
llvm-pass/res/: res1.txt  res2.txt  res3.txt  res4.txt  res5.txt
llvm-pass/src/: DumpPass.cc  MyPass.cc  StatGetter.py
